[package]
name = "pufferfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.4"
rutie = "0.8.3"
serde_json = "1.0.79"