[package]
name = "pufferfish"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.14"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.4"
serde_json = "1.0.79"
minify-html = "0.8.0"
minify-html-onepass = "0.8.0"
simple_colors = "1.0.1"
simple-server = { version = "0.4.0", optional = true }
notify = { version = "4.0.17", optional = true }


[features]
default = ["server", "file_listener"]
server = ["simple-server"]
file_listener = ["notify"]